<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_project_black"
            android:title="@string/menu_project" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map_black"
            android:title="地图" />
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/ic_apps_black"
            android:title="@string/menu_app" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="关于">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
